--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ textarea {
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  height:100px
 }
 
 header {
@@ -33,14 +34,19 @@ header {
 
 .row {
   white-space: pre-wrap;
-  height: 80px;
+  height: 100px;
   border-top: 1px solid white;
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
 
 .hour {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  display: flex;
+  height: 100px;
+  align-items: center;
 }
 
 .past {
@@ -64,9 +70,17 @@ header {
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+
+.container {
+  height: 900px;
 }
